Fixed broken css

--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body {
 	font-size: 10pt;
 	font-style: normal;
 }
-a:link {color: color:#3366FF; text-decoration:none; font-weight: normal;}
+a:link {color:#3366FF; text-decoration:none; font-weight: normal;}
 a:active {color:red; font-weight: normal;}
-a:visited {color: color:#3366FF; text-decoration:none; font-weight: normal;}
+a:visited {color:#3366FF; text-decoration:none; font-weight: normal;}
 a.hover {color: red;}
 td.mh4 {color: #DA70D6;font-size: 7.5pt}
 a.mh4 {color: #DA70D6;text-decoration:none;}
